--- a/cards/proseka/custom.css
+++ b/cards/proseka/custom.css
@@ -38,27 +38,27 @@ nav .brand-icon {
 }
 
 .frame-1 {
-  background: url(/assets/proseka/card-1.png);
+  background: url(https://koza.rip/assets/proseka/card-1.png);
   background-size: 100% 100%;
 }
 
 .frame-2 {
-  background: url(/assets/proseka/card-2.png);
+  background: url(https://koza.rip/assets/proseka/card-2.png);
   background-size: 100% 100%;
 }
 
 .frame-3 {
-  background: url(/assets/proseka/card-3.png);
+  background: url(https://koza.rip/assets/proseka/card-3.png);
   background-size: 100% 100%;
 }
 
 .frame-4 {
-  background: url(/assets/proseka/card-4.png);
+  background: url(https://koza.rip/assets/proseka/card-4.png);
   background-size: 100% 100%;
 }
 
 .frame-bd {
-  background: url(/assets/proseka/card-bd.png);
+  background: url(https://koza.rip/assets/proseka/card-bd.png);
   background-size: 100% 100%;
 }
 
@@ -72,27 +72,27 @@ nav .brand-icon {
 
 /* attributes */
 .attr-cool {
-  background: url(/assets/proseka/cool.png);
+  background: url(https://koza.rip/assets/proseka/cool.png);
   background-size: 100% 100%;
 }
 
 .attr-cute {
-  background: url(/assets/proseka/cute.png);
+  background: url(https://koza.rip/assets/proseka/cute.png);
   background-size: 100% 100%;
 }
 
 .attr-happy {
-  background: url(/assets/proseka/happy.png);
+  background: url(https://koza.rip/assets/proseka/happy.png);
   background-size: 100% 100%;
 }
 
 .attr-mysterious {
-  background: url(/assets/proseka/mysterious.png);
+  background: url(https://koza.rip/assets/proseka/mysterious.png);
   background-size: 100% 100%;
 }
 
 .attr-pure {
-  background: url(/assets/proseka/pure.png);
+  background: url(https://koza.rip/assets/proseka/pure.png);
   background-size: 100% 100%;
 }
 
@@ -132,12 +132,12 @@ nav .brand-icon {
 }
 
 .star {
-  background: url(/assets/proseka/star.png);
+  background: url(https://koza.rip/assets/proseka/star.png);
   background-size: 100% 100%;
 }
 
 .star-normal {
-  background: url(/assets/proseka/star_normal.png);
+  background: url(https://koza.rip/assets/proseka/star_normal.png);
   background-size: 100% 100%;
 }
 
@@ -146,7 +146,7 @@ nav .brand-icon {
 }
 
 .birthday {
-  background: url(/assets/proseka/birthday.png);
+  background: url(https://koza.rip/assets/proseka/birthday.png);
   background-size: 100% 100%;
 }
 
